Bug #1823253 Plan block layout is broken on edit screen
Found the class .pull-right no longer existed in raw, so changed
all .pull-right to .float-right

behatnotneeded

(cherry picked from commit a081099b291fd700e60626d58741a329c18f8e51)

--- a/htdocs/theme/raw/sass/components/_btn-group.scss
+++ b/htdocs/theme/raw/sass/components/_btn-group.scss
@@ -121,6 +121,7 @@
 
 .btn-group {
     z-index: 3;
+    margin-left: 5px;
 }
 
 // Chrome bug - flex container doesn't work on fieldset tag
